--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,29 +1,33 @@
 [versions]
 activityComposeVersion = "1.10.1"
-agp = "8.9.1"
-hiltAndroidVersion = "2.51.1"
+agp = "8.9.3"
+coreTestingVersion = "2.2.0"
+hiltAndroidVersion = "2.55"
 hiltNavigationComposeVersion = "1.2.0"
 
-coreKtx = "1.15.0"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.7"
+kotlinxCoroutinesTestVersion = "1.10.1"
+lifecycleRuntimeKtx = "2.9.0"
 
-composeBom = "2025.03.01"
-lifecycleViewmodelCompose = "2.8.7"
-material = "1.7.8"
-navigationCompose = "2.8.9"
-ui = "1.7.8"
-uiToolingPreview = "1.7.8"
+composeBom = "2025.05.01"
+lifecycleViewmodelCompose = "2.9.0"
+material = "1.8.2"
+mockitoCoreVersion = "5.5.0"
+navigationCompose = "2.9.0"
+ui = "1.8.2"
+uiToolingPreview = "1.8.2"
 mockito-kotlin = "5.0.0"
 
 kotlin = "2.1.20"
-room = "2.6.1"
+room = "2.7.1"
 coroutines = "1.10.1"
 
 
 [libraries]
+androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTestingVersion" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
@@ -31,6 +35,8 @@ kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutine
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationComposeVersion" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroidVersion" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroidVersion" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTestVersion" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCoreVersion" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockito-kotlin" }
 androidx-activity-compose-v182 = { module = "androidx.activity:activity-compose", version.ref = "activityComposeVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
